--- a/test/browser.html
+++ b/test/browser.html
@@ -9,7 +9,9 @@
 <script src="../vendor/mocha/mocha.js"></script>
 <script src="./assert.js"></script>
 
-<script>mocha.setup('bdd')</script>
+<script>
+  mocha.setup('bdd');
+</script>
 
 <script src="../lib/_languageData.js"></script>
 <script src="../lib/guessLanguage.js"></script>
@@ -18,5 +20,5 @@
 <div id="mocha"></div>
 
 <script>
-  mocha.run()
+  mocha.run();
 </script>
