Fix name casing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>guesslanguage.js by richtr</title>
+    <title>guessLanguage.js by richtr</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>guesslanguage.js</h1>
+          <h1>guessLanguage.js</h1>
           <h2>A JavaScript language detection library based on trigram statistical analysis for Node.js and the Web.</h2>
         </header>
 
@@ -64,7 +64,7 @@ guessLanguage.detect('...input text here...', function(language) {
 
 <p>Please note this library is in the early stages of development. If you find any bugs or issues please file them on this project and I'll take a look.</p>
 
-<p>Please also feel free to catch me on Twitter <a href="http://twitter.com/richtibbett/">@richtibbett</a>.</p>
+<p>Also, you can catch me on Twitter <a href="http://twitter.com/richtibbett/">@richtibbett</a>.</p>
         </section>
 
         <footer>
