--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>guessLanguage.js by richtr</title>
+    <title>guesslanguage.js by richtr</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>guessLanguage.js</h1>
+          <h1>guesslanguage.js</h1>
           <h2>A JavaScript language detection library based on trigram statistical analysis for Node.js and the Web.</h2>
         </header>
 
@@ -31,7 +31,9 @@
         <hr>
 
         <section id="main_content">
-          <p>A JavaScript language detection library based on trigram statistical analysis. This library works equally well when run in either the Browser or Node.js.</p>
+          <h1>guessLanguage.js</h1>
+
+<p>A JavaScript language detection library based on trigram statistical analysis. This library works equally well when run in either the Browser or Node.js.</p>
 
 <h4>Usage</h4>
 
@@ -51,7 +53,12 @@
 &lt;/script&gt;
 </code></pre>
 
-<p>You can use this library in a Node.js project as follows (npm package coming soon!):</p>
+<p>You can use this library in a Node.js project. This library is available as an npm package:</p>
+
+<pre><code>sudo npm install -g guesslanguage
+</code></pre>
+
+<p>Using this library in a Node.js project can be done as follows:</p>
 
 <pre><code>var guessLanguage = require('./lib/guessLanguage');
 
@@ -64,7 +71,7 @@ guessLanguage.detect('...input text here...', function(language) {
 
 <p>Please note this library is in the early stages of development. If you find any bugs or issues please file them on this project and I'll take a look.</p>
 
-<p>Also, you can catch me on Twitter <a href="http://twitter.com/richtibbett/">@richtibbett</a>.</p>
+<p>Please also feel free to catch me on Twitter <a href="http://twitter.com/richtibbett/">@richtibbett</a>.</p>
         </section>
 
         <footer>
