--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <h4>Try it out</h4>
 
-<script src="lib/_languageData.js"></script>
+<script src="lib/languageData.js"></script>
 <script src="lib/guessLanguage.js"></script>
 
 <p>
