Update sub-title in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>guessLanguage.js</h1>
-          <h2>A JavaScript language detection library based on trigram statistical analysis for Node.js and the Web.</h2>
+          <h2>A natural language detection library based on trigram statistical analysis for Node.js and the Web.</h2>
         </header>
 
         <section id="downloads" class="clearfix">
