Ensure scripts are marked as utf8

--- a/example.html
+++ b/example.html
@@ -21,8 +21,8 @@
 
 <h1>guessLanguage.js library demo</h1>
 
-<script src="./lib/_languageData.js"></script>
-<script src="./lib/guessLanguage.js"></script>
+<script src="./lib/_languageData.js" charset="utf-8"></script>
+<script src="./lib/guessLanguage.js" charset="utf-8"></script>
 
 <p>Enter some text below to try this library:</p>
 
@@ -30,7 +30,7 @@
 
 <div id="output"></div>
 
-<script>
+<script charset="utf-8">
 var inputEl = document.getElementById('input'),
     outputEl = document.getElementById('output');
 
